ADD: criado novas features como: melhoria no codigo e leitura de arquivos,endpoint de recuperar a senha, melhora no envio de flores via email, salvar imagens agora no banco de dados, e criação de tokens paralelos para recuperar a senha